# scip-clang

./: .bazelrc  .clang-format  .dockerignore  .git-blame-ignore-revs  .gitignore  BUILD  CHANGELOG.md  CONTRIBUTING.md  Design.md  Development.md  Dockerfile  MODULE.bazel  README.md  WORKSPACE  extensions.bzl  external.bzl  fetch_deps.bzl  flake.nix  llvm_zlib_repo.bzl  mise.toml  pyproject.toml  regen_compdb.sh  settings.bzl  setup.bzl  setup_deps.bzl  setup_llvm.bzl
.aspect/bazelrc/: ci.bazelrc
.aspect/workflows/: config.yaml
.buildkite/: chromium.sh  chromium.yaml  pipeline.yaml
.github/: actionlint.yaml  labeler.yml
.github/workflows/: BUILD  release-docker.yml  release-template.md  release.yml
.github/workflows/in/: BUILD  release.in.yml
config/: BUILD
docs/: CrossRepo.md  Design.md  Development.md  IndexingProjects.md  SourceLocation.md  Troubleshooting.md
indexer/: AbslExtras.h  ApproximateNameResolver.cc  ApproximateNameResolver.h  AstConsumer.cc  AstConsumer.h  BUILD  ClangAstMacros.h  CliOptions.cc  CliOptions.h  CommandLineCleaner.cc  CommandLineCleaner.h  Comparison.cc  Comparison.h  CompilationDatabase.cc  CompilationDatabase.h  DebugHelpers.cc  DebugHelpers.h  Derive.h  Driver.cc  Driver.h  DriverWorkerComms.cc  DriverWorkerComms.h  Enforce.cc  Enforce.h  Exception.cc  Exception.h  FileMetadata.h  FileSystem.cc  FileSystem.h  Hash.h  IdPathMappings.cc  IdPathMappings.h  Indexer.cc  Indexer.h  IpcMessages.cc  IpcMessages.h  JsonIpcQueue.cc  JsonIpcQueue.h  LLVMAdapter.h  LLVMCommandLineParsing.cc  (+35 more)
indexer/os/: BUILD  Linux.cc  Os.cc  Os.h  Windows.cc  macOS.cc
proto/: BUILD  fwd_decls.proto
test/: BUILD  Snapshot.cc  Snapshot.h  ipc_test_main.cc  test_main.cc  test_main.sh  test_suite.bzl
test/compdb/: simple-2.snapshot.yaml  simple-3.snapshot.yaml  simple.json  skipping-4.snapshot.yaml  skipping.json
test/index/: .clang-format
test/index/aliases/: aliases.cc  aliases.snapshot.cc
test/index/crossrepo/: external_symbols.snapshot.cc  main.cc  main.snapshot.cc  package-map.json
test/index/cuda/: cuda_stub.h  cuda_stub.snapshot.h  kernelcall.cu  kernelcall.snapshot.cu
test/index/docs/: docs.cc  docs.snapshot.cc
test/index/functions/: body.cc  body.snapshot.cc  ctors_dtors.cc  ctors_dtors.snapshot.cc  enable_if_templates.cc  enable_if_templates.snapshot.cc  functions.cc  functions.snapshot.cc  methods.cc  methods.snapshot.cc  operators.cc  operators.snapshot.cc  template_body.cc  template_body.snapshot.cc  templates.cc  templates.snapshot.cc
test/index/fwd_decl/: doc_check.cc  doc_check.snapshot.cc  doc_check_def.cc  doc_check_def.snapshot.cc  ext_header.h  ext_header.snapshot.h  external_symbols.snapshot.cc  mydefs.cc  mydefs.snapshot.cc  myheader.h  myheader.snapshot.h  myuses.cc  myuses.snapshot.cc
test/index/macros/: macros.cc  macros.h  macros.snapshot.cc  macros.snapshot.h  system_header.h  system_header.snapshot.h  use_system_header.cc  use_system_header.snapshot.cc
test/index/namespaces/: namespaces.cc  namespaces.snapshot.cc  system_header.h  system_header.snapshot.h
test/index/types/: bad_tagdecl.cc  bad_tagdecl.snapshot.cc  ill_formed.cc  inheritance.cc  inheritance.snapshot.cc  templates.cc  templates.snapshot.cc  type_alias.cc  type_alias.snapshot.cc  types.cc  types.h  types.snapshot.cc  types.snapshot.h  using.cc  using.snapshot.cc
test/index/vars/: k&r.c  k&r.snapshot.c  members.cc  members.snapshot.cc  templates.cc  templates.snapshot.cc  vars.cc  vars.snapshot.cc
test/index/x/: inheritance.cc  inheritance.snapshot.cc
test/preprocessor/already_preprocessed/: main.cc  main.preprocessor-history.yaml
test/preprocessor/hashinclude/: 1-1.h  1-2.h  1.h  main.cc  main.preprocessor-history.yaml
test/preprocessor/ill_behaved/: good_header.h  ill_behaved.h  main.cc  main.preprocessor-history.yaml
test/robustness/: compile_commands.json  main.c
tools/: BUILD  analyze-compdb.sh  analyze_compdb.py  analyze_pp_trace.py  benchmark.py  build_release_workflow.py  lint.sh  long_trace.pbtx  package-map.json  reduce.py  reformat.sh  reformat_python.py  regen_compdb.sh  regenerate-compdb.sh  regenerate-compile-commands.sh  requirements.in  requirements_lock.txt  translation_unit_runner.py  version_check.sh  vm-setup-cuda.sh  vm-setup.sh
tools/linter/: BUILD.bazel  requirements_lock.txt
