[tool.poetry]
name = "scip-clang"
version = "0.0.0"
description = "A SCIP indexer for C and C++ code."
authors = ["Varun Gandhi <varun.gandhi@sourcegraph.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
